--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
+    "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2"
   }
 }
